lecture3/compiling_error.txt
D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp: In function 'double knuthQuicksort(int*, int, int)':
D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:78:29: error: cannot convert 'LARGE_INTEGER' {aka '_LARGE_INTEGER'} to 'PLARGE_INTEGER' {aka '_LARGE_INTEGER*'}
   QueryPerformanceFrequency(frequency);
                             ^~~~~~~~~
In file included from c:\mingw\include\windows.h:44,
                 from D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:13:
c:\mingw\include\winbase.h:2240:51: note:   initializing argument 1 of 'BOOL QueryPerformanceFrequency(PLARGE_INTEGER)'
 WINBASEAPI BOOL WINAPI QueryPerformanceFrequency (PLARGE_INTEGER);
                                                   ^~~~~~~~~~~~~~
D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:80:27: error: cannot convert 'LARGE_INTEGER' {aka '_LARGE_INTEGER'} to 'PLARGE_INTEGER' {aka '_LARGE_INTEGER*'}
   QueryPerformanceCounter(t1);
                           ^~
In file included from c:\mingw\include\windows.h:44,
                 from D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:13:
c:\mingw\include\winbase.h:2239:49: note:   initializing argument 1 of 'BOOL QueryPerformanceCounter(PLARGE_INTEGER)'
 WINBASEAPI BOOL WINAPI QueryPerformanceCounter (PLARGE_INTEGER);
                                                 ^~~~~~~~~~~~~~
D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:86:27: error: cannot convert 'LARGE_INTEGER' {aka '_LARGE_INTEGER'} to 'PLARGE_INTEGER' {aka '_LARGE_INTEGER*'}
   QueryPerformanceCounter(t2);
                           ^~
In file included from c:\mingw\include\windows.h:44,
                 from D:\Nicholas DiMaria\Documents\School\Junior Year\Applied Data Structures\lecture3\knuthoptimizedQuicksort.cpp:13:
c:\mingw\include\winbase.h:2239:49: note:   initializing argument 1 of 'BOOL QueryPerformanceCounter(PLARGE_INTEGER)'
 WINBASEAPI BOOL WINAPI QueryPerformanceCounter (PLARGE_INTEGER);
                                                 ^~~~~~~~~~~~~~
